[package]
name = "sp-npos-elections"
version = "4.0.0-dev"
authors = ["5irechain"]
edition = "2021"
description = "NPoS election algorithm primitives"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", default-features = false, optional = true, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, path = "../std" }
sp-npos-elections-solution-type = { version = "4.0.0-dev", path = "./solution-type" }
sp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "../arithmetic" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "../core" }
sp-runtime = { version = "4.0.0-dev", path = "../runtime", default-features = false }
frame-support = { version = "4.0.0-dev", path = "../../frame/support/", default-features = false }

[dev-dependencies]
dfs-test-utils = { version = "4.0.0-dev", path = "../../test-utils" }
rand = "0.7.3"

[features]
default = ["std"]
bench = []
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
]
